tests/fixtures/multi_module/valid/standalone/lonely.furqan
bismillah Lonely {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: standalone
    not_scope: nothing_excluded
}

fn placeholder() -> Integrity {
    return Integrity
}
